j--/tests/pass/Comments.java
package pass;

public class Comments {
    

    // This is an accepted comment!

    /*
        This is also an accepted comment!
        Even this ;)
    */

    public static void main(String[] args) {
        System.out.println("Hello, World!");
    }
}
