j--/tests/fail/StarAssign.java
package fail;

public class StarAssign {
    public static void main(String[] args) {
        int a = 10;
        a *= 'a';
        System.out.println(a);
    }
}
